2006-03-09  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* serial.c: Fix a pair of wrong or incomplete assignations
	in set_attributes.
	
2006-02-28  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* serial.h: New file with serial port constants.
	* serial.c: Use the constants in serial.h instead of magic numbers.
	
2006-01-03  Jonathan Pryor  <jonpryor@vt.edu>

	* sys-time.c: lutimes(2) only exists on some BSDs.  There's a configure
	  check for it now -- use it.

2005-12-28  Jonathan Pryor  <jonpryor@vt.edu>

	* map-icalls.h: Flush (add utimes_bad, lutimes, futimes).
	* sys-time.c: Add lutimes(2) and futimes(2) wrapper.

2005-12-27  Jonathan Pryor  <jonpryor@vt.edu>

	* map.c: Include <sys/mman.h>.  Fixes #77091.  Thanks to Ben Gamari.

2005-12-01  Jonathan Pryor  <jonpryor@vt.edu>

	* Makefile.am: Use $(CRYPT_LIB), not -lcrypt, as not all platforms 
	  support -lcrypt.
	* stdlib.c: Wrap Mono_Posix_Syscall_setkey() within HAVE_SETKEY, not
	  PLATFORM_WIN32

2005-12-01  Daniel Drake  <dsd@gentoo.org>

	* Makefile.am: Link against libcrypt, needed for setkey(3) as referenced
	in stdlib.c. Problem caught by Michael Hill.

2005-11-07  Jonathan Pryor  <jonpryor@vt.edu>

	* map-icalls.h: Oddly, this file didn't get the new functions added in
	  2005-10-14 -- ToConfstrName, FromConfstrName, etc.  Add them.
	* map.c, map.h: Remove invalid enumeration value SyslogFacility.LOG_USRE.

2005-10-14  Jonathan Pryor  <jonpryor@vt.edu>

	* signal.c: Don't build Syscall wrappers on Win32.

2005-10-14  Jonathan Pryor  <jonpryor@vt.edu>

	* Makefile.am (MPH_UNIX_SOURCE): Add syslog.c.
	* dirent.c, grp.c, pwd.c, signal.c, stdio.c, stdlib.c: Wrap functions which
	  return `void' so that they instead: (1) return `int', (2) clear errno
	  before calling the real function, and (3) return -1 if errno changed.
	  This must be done in native code because calling 
	  Stdlib.SetLastError/Syscall.xxx
	  from managed code won't work reliably (since errno may change between the